[gd_scene load_steps=3 format=3 uid="uid://dxndij13obfgx"]

[ext_resource type="Script" uid="uid://v20dfc0v65go" path="res://retro_science_main.gd" id="1_mxjyl"]
[ext_resource type="FontFile" uid="uid://dodl7tcddxwfr" path="res://Berthold City Light Regular.otf" id="2_j6diy"]

[node name="RetroScienceMain" type="Node2D"]
script = ExtResource("1_mxjyl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GamePanel" type="Panel" parent="CanvasLayer"]
offset_right = 1153.0
offset_bottom = 646.0

[node name="ButtonShieldsUp" type="Button" parent="CanvasLayer/GamePanel"]
layout_mode = 0
offset_left = 78.0
offset_top = 146.0
offset_right = 213.0
offset_bottom = 213.0
text = "Increase Shield"

[node name="ButtonConsume" type="Button" parent="CanvasLayer/GamePanel"]
layout_mode = 0
offset_left = 78.0
offset_top = 257.0
offset_right = 213.0
offset_bottom = 324.0
text = "Unshackle AI
"
autowrap_mode = 2

[node name="ButtonEMP" type="Button" parent="CanvasLayer/GamePanel"]
layout_mode = 0
offset_left = 80.0
offset_top = 365.0
offset_right = 215.0
offset_bottom = 432.0
text = "Launch EMP
"
autowrap_mode = 2

[node name="AI Screen" type="TextEdit" parent="CanvasLayer/GamePanel"]
layout_mode = 0
offset_left = 315.0
offset_top = 110.0
offset_right = 776.0
offset_bottom = 377.0
theme_override_colors/font_color = Color(0.98039216, 0.007843138, 0, 1)
theme_override_colors/font_readonly_color = Color(0.039215688, 0.7254902, 0.29411766, 1)
theme_override_colors/background_color = Color(0.043137256, 0, 0.05882353, 0.8235294)
theme_override_fonts/font = ExtResource("2_j6diy")
theme_override_font_sizes/font_size = 21
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
middle_mouse_paste_enabled = false
autowrap_mode = 2
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="Label" type="Label" parent="CanvasLayer/GamePanel"]
layout_mode = 0
offset_left = 318.0
offset_top = 387.0
offset_right = 773.0
offset_bottom = 410.0
text = "The AI has a query for you..."

[node name="TextSubmission" type="TextEdit" parent="CanvasLayer/GamePanel"]
layout_mode = 0
offset_left = 317.0
offset_top = 418.0
offset_right = 776.0
offset_bottom = 448.0
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
middle_mouse_paste_enabled = false
caret_type = 1
caret_blink = true

[node name="ButtonStartAI" type="Button" parent="CanvasLayer/GamePanel"]
layout_mode = 0
offset_left = 315.0
offset_top = 110.0
offset_right = 773.0
offset_bottom = 375.0
text = "AI Query"
autowrap_mode = 1

[node name="ConnectPanel" type="Panel" parent="CanvasLayer"]
offset_left = 297.0
offset_top = 490.0
offset_right = 795.0
offset_bottom = 625.0

[node name="TextServerIP" type="TextEdit" parent="CanvasLayer/ConnectPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = 9.0
offset_right = 481.0
offset_bottom = 39.0
text = "127.0.0.1"
placeholder_text = "Enter Server IP Address"
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
middle_mouse_paste_enabled = false
caret_type = 1
caret_blink = true

[node name="ButtonConnect" type="Button" parent="CanvasLayer/ConnectPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 57.0
offset_right = 481.0
offset_bottom = 124.0
text = "Connect to Ship"
autowrap_mode = 2

[node name="TimerQuestionFinished" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="pressed" from="CanvasLayer/GamePanel/ButtonShieldsUp" to="." method="_on_button_shields_up_pressed"]
[connection signal="pressed" from="CanvasLayer/GamePanel/ButtonConsume" to="." method="_on_button_consume_pressed"]
[connection signal="pressed" from="CanvasLayer/GamePanel/ButtonEMP" to="." method="_on_button_emp_pressed"]
[connection signal="text_changed" from="CanvasLayer/GamePanel/TextSubmission" to="." method="_on_text_submission_text_changed"]
[connection signal="pressed" from="CanvasLayer/GamePanel/ButtonStartAI" to="." method="_on_button_start_ai_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectPanel/ButtonConnect" to="." method="_on_button_connect_pressed"]
[connection signal="timeout" from="TimerQuestionFinished" to="." method="_on_timer_question_finished_timeout"]
